; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/time/extr_time.c_time.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/time/extr_time.c_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @_time(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i64* %0, i64** %2, align 8
  store i64 0, i64* %4, align 8
  %5 = call i32 @GetSystemTimeAsFileTime(i32* %3)
  %6 = call i64 @FileTimeToUnixTime(i32* %3, i32* null)
  store i64 %6, i64* %4, align 8
  %7 = load i64*, i64** %2, align 8
  %8 = icmp ne i64* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i64, i64* %4, align 8
  %11 = load i64*, i64** %2, align 8
  store i64 %10, i64* %11, align 8
  br label %12

12:                                               ; preds = %9, %1
  %13 = load i64, i64* %4, align 8
  ret i64 %13
}

declare dso_local i32 @GetSystemTimeAsFileTime(i32*) #1

declare dso_local i64 @FileTimeToUnixTime(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
